# aerialcore_dronemanager

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: drone_manager.yaml
launch/: drone_manager.launch  drone_manager_replanner_uav1.launch  drone_manager_replanner_uav2.launch  drone_manager_replanner_uav3.launch  drone_manager_uav1.launch  drone_manager_uav2.launch  drone_manager_wt_inspection.launch
scripts/: drone_manager.py  drone_manager_replanner_uav1.py  drone_manager_replanner_uav2.py  drone_manager_replanner_uav3.py  drone_manager_uav1.py  drone_manager_uav2.py  drone_manager_wt_inspection.py  set_workspace.sh
tmux/: session.yml
trajectories/: test_traj.csv  test_traj.txt
