<?xml version="1.0"?>
<package format="2">

  <name>drone_manager</name>
  <version>1.0.0</version>
  <description>drone manager package</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>mrs_msgs</depend>

</package>
